# MiptBayessianCourseHW

./: Makefile  README.md  pyproject.toml
hw1/: hw1.md  task1.ipynb  task3.ipynb  task6.ipynb
hw1/tasks/: task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb  task6.ipynb  task7.ipynb
hw2/: hw2.md
